# ROS_Gazebo

./: README.md
PingPong/: CMakeLists.txt  game.py  package.xml
PingPong/src/: bad_computer_node.py  bad_player_node.py  ball.py  computer_node.py  game.py  game_test.py  markers.py  player_node.py  test_computer_node.py  test_player_node.py
PingPong/srv/: GameInfo.srv
fetch_roblocks/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
fetch_roblocks/launch/: demo.launch  navigate.launch  playground.launch
fetch_roblocks/msg/: Ready.msg
fetch_roblocks/src/: demo.py  detect_pose.py  fetch_test.txt  gripper.py  move_arm.py  move_base.py  testing.py  testing_client.py  testing_server.py
fetch_roblocks/worlds/: lab.sdf  test.sdf  test_zone.sdf
pingpong/: CMakeLists.txt  README.md  package.xml
pingpong/launch/: start.launch
pingpong/msg/: MoveComputerPaddle.msg
pingpong/rviz/: arena.rviz
pingpong/src/: game.py  paddle.py  test_computer_node.py  test_player_node.py
search/: CMakeLists.txt  README.md  package.xml
search/scripts/: gen_maze.py  move_tbot3.py  problem.py  random_walk.py  search_algo.py  search_algorithm.py  server.py
search/srv/: GetScale.srv
search/worlds/: maze.sdf
